--- a/html/assets/css/style.css
+++ b/html/assets/css/style.css
@@ -888,7 +888,8 @@ h2.h2-xl { font-size: 1.5rem; }     /* 24px */
 .bg-overlay.opacity-20{ opacity: 0.2; }
 .bg-overlay.opacity-30{ opacity: 0.3; }
 .bg-overlay.opacity-40{ opacity: 0.4; }
-.bg-overlay.opacity-50{ opacity: 0.5; }
+.bg-overlay.opacity-50{ opacity: 0.5;
+                                background: linear-gradient(45deg, #ad8e8e, #b4242400); }
 .bg-overlay.opacity-60{ opacity: 0.6; }
 .bg-overlay.opacity-70{ opacity: 0.7; }
 .bg-overlay.opacity-80{ opacity: 0.8; }
@@ -927,7 +928,7 @@ h2.h2-xl { font-size: 1.5rem; }     /* 24px */
 	background-position: left center !important;
 }
 .bg-img-1{
-	background-image: url(../images/bg_1.jpg);
+	background-image: url(assets/images/logoNGO.png;
 	background-repeat: no-repeat;
 	background-position: left center !important;
 }
@@ -6386,3 +6387,15 @@ label.error {
 
 
 /*   10. Responsive Media Queries End  */
+
+.img-gallery{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.img-gallery-item a{
+    height: 450px;
+    width: 300px;
+    background-size: cover;
+}
